# flibusta_bot

./: Procfile  nixpacks.toml  pyproject.toml
flibusta_bot/: bot.py
