[tool.poetry]
name = "flibusta-bot"
version = "0.1.0"
description = ""
authors = ["pestrukha <sturbauen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.15.0"
aiohttp = "^3.10.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
